workloads/ingress/apps/dev/patch-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: default
  annotations:
    alb.ingress.sesacthon.io/certificate-arn: arn:aws:acm:ap-northeast-2:123456789012:certificate/DEV_API_CERT
  external-dns.alpha.sesacthon.io/managed-by: external-dns
spec:
  rules:
    - host: api.dev.growbin.app
